--- a/src/components/image-resize/index.css
+++ b/src/components/image-resize/index.css
@@ -1,39 +1,20 @@
-
-
-.modal {
-  position: fixed;
-  z-index: 1;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgba(0, 0, 0, 0.4);
+.tooltip {
+  position: absolute;
+  z-index: 100; /* Assurez-vous qu'il est au-dessus des autres éléments */
+  background-color: white;
+  border: 1px solid #ddd;
+  box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+  padding: 4px;
+  border-radius: 4px;
 }
 
-.modal-content {
-  background-color: #fefefe;
-  margin: 15% auto;
-  padding: 20px;
-  border: 1px solid #888;
-  width: 30%;
-}
-
-.close {
-  color: #aaa;
-  float: right;
-  font-size: 28px;
-  font-weight: bold;
-}
-
-.close:hover,
-.close:focus {
-  color: black;
-  text-decoration: none;
+.tooltip-button {
+  background-color: transparent;
+  border: none;
   cursor: pointer;
-}
-
-label {
-  display: block;
-  margin-bottom: 10px;
+  font-size: 1.2rem;
+  margin-right: 5px;
+  outline: none;
+  padding: 2px;
+  transition: box-shadow 0.3s, transform 0.3s;
 }
