--- a/src/components/toolbar/index.css
+++ b/src/components/toolbar/index.css
@@ -1,13 +1,3 @@
-/* <button className="editor__toolbar-button" data-command="bold" title="Bold"><b>B</b></button>
-<button className="editor__toolbar-button" data-command="italic" title="Italic"><i>I</i></button>
-<button className="editor__toolbar-button" data-command="underline" title="Underline"><u>U</u></button>
-<button className="editor__toolbar-button" data-command="strikeThrough" title="Strike-through"><strike>S</strike></button>
-<button className="editor__toolbar-button" data-command="justifyLeft" title="Align Left"><i className="fa fa-align-left"></i></button>
-<button className="editor__toolbar-button" data-command="justifyCenter" title="Align Center"><i className="fa fa-align-center"></i></button>
-<button className="editor__toolbar-button" data-command="justifyRight" title="Align Right"><i className="fa fa-align-right"></i></button>
-<button className="editor__toolbar-button" data-command="justifyFull" title="Justify"><i className="fa fa-align-justify"></i></button>
-<button className="editor__toolbar-button" data-command="indent" title="Indent"><i className="fa fa-indent"></i></button>
-<button className="editor__toolbar-button" data-command="outdent" title="Outdent"><i className="fa fa-outdent"></i></button> */
 
 .editor__toolbar {
   padding: 5px;
@@ -19,6 +9,23 @@
   flex-wrap: wrap;
 }
 
+.resize-handle {
+  width: 10px;
+  height: 10px;
+  background-color: blue;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  cursor: nwse-resize;
+  z-index: 1000; /* Assurez-vous qu'elle est au-dessus des autres éléments */
+}
+
+.editor__toolbar-button.dragged {
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+  background-color: #f0f0f0;
+  cursor: grabbing;
+}
 
 .editor__toolbar-button {
   background-color: transparent;
@@ -28,16 +35,58 @@
   margin-right: 5px;
   outline: none;
   padding: 5px;
+  transition: box-shadow 0.3s, transform 0.3s;
 }
 
 .editor__toolbar-button:hover {
   background-color: #eee;
 }
 
-.editor__toolbar-button:active {
+.editor__toolbar-button.active {
   background-color: #ddd;
+}
+FFQ
+.editor__toolbar-button.dragged {
+  background-color: #ddd;
+}
+
+.editor__toolbar-select {
+  /* Styles for the select element */
+  background-color: #f8f8f8;
+  border: 1px solid #ccc;
+  padding: 5px 10px;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+.editor__toolbar-select:hover {
+  background-color: #eee;
+}
+
+.editor__toolbar-select option {
+  /* Basic styles for options */
+  background-color: white;
+  color: #333;
+}
+
+.editor__toolbar-button.dragged {
+  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+  transform: scale(1.1);
+  background-color: #f0f0f0;
+  cursor: grabbing;
 }
 
 
 
 
+
+
+.editor-code-block {
+  background-color: #f4f4f4;
+  border-left: 3px solid #ccc;
+  font-family: 'Courier New', monospace;
+  margin: 10px 0;
+  padding: 10px;
+  white-space: pre-wrap;
+  word-wrap: break-word;
+}
