--- a/src/richtext/index.css
+++ b/src/richtext/index.css
@@ -1,7 +1,7 @@
 /* Style du conteneur de l'éditeur */
 .editor-container {
   border: 1px solid #ddd;
-  padding: 10px;
+  padding: 5px;
   border-radius: 5px;
   box-shadow: 0px 0px 5px #eee;
   background-color: white;
@@ -19,11 +19,11 @@
 .editor__content {
   border: 1px solid #ccc;
   border-radius: 4px;
-  padding: 10px;
+  padding: 15px;
   height: 200px; /* Hauteur fixe ou utilisez 'min-height' */
   overflow-y: auto; /* Pour gérer le défilement */
   background-color: #f9f9f9;
-  font-family: Arial, sans-serif; /* Choisissez une police lisible */
+  font-family: Arial, FFQsans-serif; /* Choisissez une police lisible */
   font-size: 16px; /* Taille de police appropriée */
   line-height: 1.5; /* Espacement des lignes pour la lisibilité */
 }
